@@ -1,5 +1,7 @@
 Search API Solr search 1.x, dev (xx/xx/xxxx):
 ---------------------------------------------
+- #1896080 by drunken monkey: Included additional required config files in the
+  module.
 - #1919572 by chaby: Fixed indexing of geohashes.
 - #2004596 by drunken monkey: Fixed "More Like This" for Solr 4.x.
 - #2007214 by drunken monkey: Fixed unsetting of object properties.
